--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.235.33.124:9000/</sonar.host.url>
-                <sonar.login>admin</sonar.login>
+                <sonar.login>squ_26b1e1cd9fc221ad9d1a0fc6444eb880eb9990bd</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
